finish strategy D; re-numbering pages.

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -748,13 +748,85 @@
     </div>
 
 
+    <!-- ================= PAGE 33: 换手规则 &lt;GG11&gt; ================= -->
+    <div class="sheet">
+        <div class="a4-height-indicator"></div>
+        <div class="chapter-2-marker"></div>
+        <h1>2.5 团队赛：换手惊魂</h1>
+        <p>宋书月最关心这个规则，因为她是操控手。规则说必须在 35秒 到 25秒 之间换人。</p>
 
-    <!-- ================= PAGE 33: 策略模拟封面 ================= -->
+        <p class="dialogue">“如果超时了会怎么样？”</p>
+        <p>王老师说：“会被取消资格！那场比赛就 0 分了！”</p>
+
+        <p><span class="chinese-label">我们的计划：</span></p>
+        <ul>
+            <li>关注比赛计时器，35秒一到就示意“换手！”</li>
+            <li>不管机器人在干嘛，哪怕差一点就得分了，也必须停下来。</li>
+            <li>把机器人举起来，让它不能再动了。</li>
+        </ul>
+
+        <div class="footer">
+            <span>记录人：印涵邸</span>
+        </div>
+        <div class="page-number">33</div>
+    </div>
+
+
+    <!-- ================= PAGE 34: 技能赛规则 ================= -->
+    <div class="sheet">
+        <div class="a4-height-indicator"></div>
+        <div class="chapter-2-marker"></div>
+        <h1>2.6 技能赛特别规则</h1>
+
+        <p>除了团队赛，我们还要打技能赛。技能赛的场地有点不一样。</p>
+        <ul>
+            <li><span class="chinese-label">红区专属：</span> 机器人必须从红色的三角区出发。</li>
+            <li><span class="chinese-label">装填限制：</span> 只能用红色的 Load Zone。蓝色的那个不能用！</li>
+        </ul>
+
+        <div class="sticky-note">
+            这意味着我们的自动程序必须能自己跑回来，或者我们要设计一个能装很多 Pin 的大肚子，减少回来的次数。
+        </div>
+        <p><strong>规则 &lt;RSC7&gt;</strong> 说，自动赛的时候，我们绝对不能碰遥控器。我们要像雕塑一样站着。</p>
+
+        <p>但是如果机器人卡住了怎么办？我们可以申请重置 <strong>&lt;RSC5&gt;</strong>。</p>
+        <p><span class="chinese-label">注意：</span> 重置的时候，机器人手里拿的分数都要拿走，不计分。所以重置是很亏的，我们要保证代码稳定！</p>
+
+        <div class="footer">
+            <span>记录人：印涵邸</span>
+        </div>
+        <div class="page-number">34</div>
+    </div>
+
+
+    <!-- ================= PAGE 35: 设计约束总结 ================= -->
+    <div class="sheet">
+        <div class="a4-height-indicator"></div>
+        <div class="chapter-2-marker"></div>
+        <h1>2.7 设计约束总结</h1>
+
+        <p>综合上面的所有规则，我们给设计组提了几点“死命令”：</p>
+
+        <ol>
+            <li><span class="chinese-label">必须能抓 Beam：</span> 不然只能拿低分。</li>
+            <li><span class="chinese-label">必须能举高：</span> 要超过 12 英寸才能挂高塔。</li>
+            <li><span class="chinese-label">必须能折叠：</span> 出发时要缩在 15 英寸高的小盒子里。</li>
+            <li><span class="chinese-label">必须分色：</span> 要能识别颜色，不然做不出完美 Stack。</li>
+        </ol>
+
+        <div class="footer">
+            <span>记录人：印涵邸</span>
+        </div>
+        <div class="page-number">35</div>
+    </div>
+
+
+    <!-- ================= PAGE 36: 策略模拟封面 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
         <div style="text-align: center; margin-top: 100px;">
-            <h1 style="font-size: 48px; color: #2E86C1;">我们的战术推演</h1>
+            <h1 style="font-size: 48px; color: #2E86C1;">2.8 我们的战术推演</h1>
 
             <!-- <div
                 style="width: 120px; height: 120px; border: 3px solid #2E86C1; border-radius: 10px; margin: 30px auto; display: flex; align-items: center; justify-content: center; font-size: 60px;">
@@ -769,15 +841,15 @@
                     <li>策略 A：低空快跑流 (Low & Fast)</li>
                     <li>策略 B：高塔建筑师 (Tower Builder)</li>
                     <li>策略 C：Beam 专家 (Beam Strategist)</li>
-                    <li>策略 D：极限满分梦 (The Dream)</li>
+                    <li>策略 D：高塔上的圣杯（High Stake Grail）</li>
                 </ul>
             </div>
 
         </div>
-        <div class="page-number">33</div>
+        <div class="page-number">36</div>
     </div>
 
-    <!-- ================= PAGE 34: 策略 A - 低空快跑 ================= -->
+    <!-- ================= PAGE 37: 策略 A - 低空快跑 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
@@ -814,10 +886,10 @@
         <div class="footer">
             <span>记录人：印涵邸</span>
         </div>
-        <div class="page-number">34</div>
+        <div class="page-number">37</div>
     </div>
 
-    <!-- ================= PAGE 35: 策略 B - 高塔建筑师 ================= -->
+    <!-- ================= PAGE 38: 策略 B - 高塔建筑师 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
@@ -846,22 +918,22 @@
         <div class="footer">
             <span>记录人：印涵邸</span>
         </div>
-        <div class="page-number">35</div>
+        <div class="page-number">38</div>
     </div>
 
 
 
-    <!-- ================= PAGE 38: 策略 C - Beam 专家 ================= -->
+    <!-- ================= PAGE 39: 策略 C - Beam 专家 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
         <h1>策略 C：Beam 专家 (Beam Strategist)</h1>
 
-        <p><span class="chinese-label">想法：</span> 根据 &lt;SC3-c-iii&gt; ，Beam 可以作为Stack的一部分，并可以算作1种颜色；又根据
+        <p><span class="chinese-label">想法：</span> 根据 &lt;SC3-c-iii&gt; ，Beam 可以作为Stack的一部分，并可以算作1种颜色，帮助获取多色奖励；又根据
             &lt;SC6-b&gt;，连接了 Beam 的 Stack 可以拿到 Matching Goal 奖励，就是不用把 Stack 放到对应颜色的地面Goal里。
         </p>
 
-        <p><span class="chinese-label">目标：</span> 优先组成两个 &lt;SC2&gt; 形式的连接了 Beam 的3联“奖杯” Stack。再将两个3色 Stack 放入地面 Goal。
+        <p><span class="chinese-label">目标：</span> 优先组成两个 &lt;SE2&gt; 形式的连接了 Beam 的3联“奖杯” Stack。再将两个3色 Stack 放入地面 Goal。
         </p>
 
 
@@ -871,10 +943,10 @@
         <div class="footer">
             <span>记录人：印涵邸</span>
         </div>
-        <div class="page-number">38</div>
+        <div class="page-number">39</div>
     </div>
 
-    <!-- ================= PAGE 39: 策略 C 详细计算 ================= -->
+    <!-- ================= PAGE 40: 策略 C 详细计算 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
@@ -906,97 +978,74 @@
         <div class="footer">
             <span>记录人：印涵邸</span>
         </div>
-        <div class="page-number">39</div>
+        <div class="page-number">40</div>
     </div>
 
 
-    <!-- ================= PAGE 41: 策略 D - 极限满分梦 ================= -->
+    <!-- ================= PAGE 41: 策略 D - 高塔上的圣杯 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
-        <h1>策略 D：极限满分梦 (The Dream)</h1>
+        <h1>策略 D：高塔上的圣杯</h1>
 
-        <p>既然发现了 Beam 的秘密，我们就可以算一算理论最高分是多少了。虽然很难做到，但梦想还是要有的嘛！</p>
+        <p><span class="chinese-label">想法：</span> 高塔奖励是针对每一个架在高塔上的 Stack 的，而像 &lt;SC2&gt; 这样的3联“奖杯” Stack 其实是3个
+            Stack，如果把“奖杯”整个架到高塔上，就可以拿到3个高塔奖励！
+        </p>
 
-        <p>假设我们是超人，操作零失误，那能拿多少分？</p>
+        <p><span class="chinese-label">目标：</span> 在策略 C 的基础上，将其中一个3联“奖杯”Stack 放置在 Standoff Goal 上。</p>
 
-        <div class="img-placeholder" style="height: 250px;">
-
+        <img src="../assets/ch02/SE7-2.webp" alt="Standoff Goal with Beam and Pins"
+            style="height: 350px; display: block; margin: 20px auto; border-radius: 20px;">
+        <!-- <p class="img-caption">目标形态：将一个“奖杯”放置在高塔上</p> -->
+        <div class="math-paper">
+            <h3>🧮 算分草稿</h3>
+            <p>在策略C得分基础上，增加3个高塔奖励，即增加30分。</p>
+            <!-- <p>
+                <span class="chinese-label">1. 高塔上的“奖杯” (Standoff Goal):</span><br>
+                Pin(6分)+Beam(10分)+3色奖励(45分)+颜色匹配(30分)+<strong>高塔奖励(30分)</strong> = <strong>121分</strong>
+            </p>
+            <p>
+                <span class="chinese-label">2. 地面上的“奖杯”:</span><br>
+                Pin(6分)+Beam(10分)+3色奖励(45分)+颜色匹配(30分) = <strong>91分</strong>
+            </p>
+            <p>
+                <span class="chinese-label">3. 剩下2个3色Stack:</span> 2 x 28 分 = <strong>56分</strong>
+            </p>
+            <p>
+                <span class="chinese-label">总分计算：</span><br>
+                121 (高塔) + 91 (地面奖杯) + 56 (普通Stack) + 8 (清空) + 2 (接触)
+            </p> -->
+            <p style="border-top: 2px dashed #888; margin-top: 10px; padding-top: 10px;">
+                <strong>预计总分：278 分</strong>
+            </p>
         </div>
-
         <div class="footer">
             <span>记录人：印涵邸</span>
         </div>
         <div class="page-number">41</div>
     </div>
 
-    <!-- ================= PAGE 42: 策略 D 计算 (高塔部分) ================= -->
+
+
+    <!-- ================= PAGE 42: 策略 D 评价 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
-        <h1>策略 D：高塔部分计算</h1>
+        <h1>策略 D：评价</h1>
 
-        <div class="math-paper">
-            <p><strong>1. 高塔无敌结构 (Standoff Goal)</strong></p>
-            <p>参考规则书里的 SE7 图，用 Beam 挂满 6 个 Pin (做成 3 个 3色 Stack)：</p>
+        <p>这个分数 (278分) 比策略C的248分高出整整30分！这30分完全来自于高塔奖励，证明了攻克高塔是值得的。</p>
 
-            <h3>得分计算（为什么是 121 分？）</h3>
-            <p>这个惊人的分数源于 Beam 将结构分成了 3 个独立的 Stack，使得奖励翻了三倍！</p>
+        <h3>优点</h3>
+        <p>分数潜力巨大。如果能够实现，这套组合拳将非常有竞争力，为我们在比赛中获胜增加了重要砝码。</p>
 
-            <table style="width: 100%; margin: 10px 0; font-size: 14px;">
-                <thead>
-                    <tr>
-                        <th style="background-color: #E67E22; color: white;">得分项</th>
-                        <th style="background-color: #E67E22; color: white;">数量</th>
-                        <th style="background-color: #E67E22; color: white;">单项分值</th>
-                        <th style="background-color: #E67E22; color: white;">小计</th>
-                        <th style="background-color: #E67E22; color: white;">规则/备注</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>连接的 Pin</td>
-                        <td>6 个</td>
-                        <td>1 分</td>
-                        <td><strong>6</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>连接的 Beam</td>
-                        <td>1 个</td>
-                        <td>10 分</td>
-                        <td><strong>10</strong></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>3色 Stack 奖励</td>
-                        <td>3 个 Stack</td>
-                        <td>15 分</td>
-                        <td><strong>45</strong></td>
-                        <td>灰 Beam + 蓝 Pin + 红 Pin = 3 种颜色</td>
-                    </tr>
-                    <tr>
-                        <td>颜色匹配奖励 (Matching Goal)</td>
-                        <td>3 个 Stack</td>
-                        <td>10 分</td>
-                        <td><strong>30</strong></td>
-                        <td>任何连接到 Beam 的 Stack 自动获得此奖励 &lt;SC6b&gt;</td>
-                    </tr>
-                    <tr>
-                        <td>高塔奖励 (Standoff Bonus)</td>
-                        <td>3 个 Stack</td>
-                        <td>10 分</td>
-                        <td><strong>30</strong></td>
-                        <td>通过 Beam 放置在高塔上的 Stack</td>
-                    </tr>
-                    <tr style="background-color: #FFD700; font-weight: bold;">
-                        <td colspan="3" style="text-align: right;">总分 (TOTAL)</td>
-                        <td style="font-size: 20px; color: #D35400;">121</td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <h3>缺点</h3>
+        <p>技术难度极高。我们的机器人需要：</p>
+        <ul>
+            <li>一个超长的升降臂，能稳定地举起沉重的 Beam 结构。</li>
+            <li>精确的定位能力，才能把 Beam 准确地挂在 Standoff Goal 上。</li>
+            <li>优秀的平衡性，防止在举升过程中翻车。</li>
+        </ul>
+        <p class="dialogue"><span class="chinese-label">叶恒嘉：</span> “这个动作对机器人来说就像是‘举重’，还得是‘过顶举’，太考验核心力量了！”</p>
 
         <div class="footer">
             <span>记录人：印涵邸</span>
@@ -1004,23 +1053,21 @@
         <div class="page-number">42</div>
     </div>
 
-    <!-- ================= PAGE 43: 策略 D 计算 (地面部分) ================= -->
+    <!-- ================= PAGE 43: 最终策略决定 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
-        <h1>策略 D：地面部分计算 (重写)</h1>
+        <h1>最终策略决定</h1>
 
-        <div class="math-paper">
-            <p><span class="chinese-label">地面得分：</span> 假设我们用了 6 个 Pin 在塔上，还剩下 30 个 Pin。</p>
-            <p>因为红色、蓝色Pin分别还剩7个，这 30 个 Pin 可以做成 7 个完美的 3色 Stack，剩下的橙色Pin还能与Beam组成双色Stack：</p>
-            <ul>
-                <li><strong>7个 Matching Stacks (地面 Goal):</strong> 7 * (3+15+10) = <strong>176 分</strong></li>
-                <li><strong>3个 橙色Pin与1个Beam:</strong> 3 * (1+5+10) + 10 = <strong>58 分</strong></li>
-            </ul>
-            <p style="border-top: 2px dashed #888;">
-                <strong>地面小计：234 分</strong>
-            </p>
+        <p>经过四轮推演，我们全票通过了以 <strong>策略 D “高塔上的圣杯”</strong> 为我们的主要研发方向！</p>
+
+        <div class="sticky-note" style="transform: rotate(1deg);">
+            <p><strong>我们的结论：</strong></p>
+            <p>虽然策略D很难，但它是理论与实际结合的最佳得分方案。我们决定接受挑战！接下来的工作重心将全部围绕如何实现这个“高塔圣杯”来展开。</p>
+            <p><strong>Let's do it!</strong></p>
         </div>
+
+        <p>从下一章开始，我们将进入激动人心的机器人设计环节，把这个伟大的构想变成现实！</p>
 
         <div class="footer">
             <span>记录人：印涵邸</span>
@@ -1028,123 +1075,7 @@
         <div class="page-number">43</div>
     </div>
 
-    <!-- ================= PAGE 44: 策略 D 总分与反思 ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
-        <h1>策略 D：终极得分！</h1>
-
-        <div class="math-paper">
-            <p><span class="chinese-label">总分大汇总：</span></p>
-            <ul>
-                <li>塔上结构：121 分</li>
-                <li>地面得分：234 分</li>
-                <li>清空起始桩：8 分</li>
-                <li>接触分：2 分</li>
-            </ul>
-
-            <p
-                style="border: 3px solid #E74C3C; padding: 10px; text-align: center; font-size: 28px; font-weight: bold; color: #E74C3C; margin-top: 20px;">
-                理论极限 >= 365 分！
-            </p>
-        </div>
-
-        <p>算出这个数字的时候，我们全都惊呆了！</p>
-        <p class="dialogue"><span class="chinese-label">叶恒嘉泼了一盆冷水：</span> “这要在 60 秒内做完？平均 5 秒做一个 3色 Stack？机器人得飞起来才行吧！”
-        </p>
-        <p>虽然很难，但这让我们看到了天花板在哪里。我们要朝着这个方向努力！</p>
-
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-        </div>
-        <div class="page-number">44</div>
-    </div>
-
-    <!-- ================= PAGE 45: 技能赛规则 ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
-        <h1>2.5 技能赛特别规则</h1>
-
-        <p>除了团队赛，我们还要打技能赛。技能赛的场地有点不一样。</p>
-
-        <ul>
-            <li><span class="chinese-label">红区专属：</span> 机器人必须从红色的三角区出发。</li>
-            <li><span class="chinese-label">装填限制：</span> 只能用红色的 Load Zone。蓝色的那个不能用！</li>
-        </ul>
-
-        <div class="sticky-note">
-            这意味着我们的自动程序必须能自己跑回来，或者我们要设计一个能装很多 Pin 的大肚子，减少回来的次数。
-        </div>
-
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-        </div>
-        <div class="page-number">45</div>
-    </div>
-
-    <!-- ================= PAGE 46: 自动赛无接触 ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
-        <h1>2.5 自动赛：不许动！</h1>
-
-        <p><strong>规则 &lt;RSC7&gt;</strong> 说，自动赛的时候，我们绝对不能碰遥控器。我们要像雕塑一样站着。</p>
-
-        <p>但是如果机器人卡住了怎么办？我们可以申请重置 <strong>&lt;RSC5&gt;</strong>。</p>
-        <p><span class="chinese-label">注意：</span> 重置的时候，机器人手里拿的分数都要拿走，不计分。所以重置是很亏的，我们要保证代码稳定！</p>
-
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-        </div>
-        <div class="page-number">46</div>
-    </div>
-
-    <!-- ================= PAGE 47: 换手规则 &lt;GG11&gt; ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
-        <h1>2.6 团队赛：换手惊魂</h1>
-        <p>宋书月最关心这个规则，因为她是操控手。规则说必须在 35秒 到 25秒 之间换人。</p>
-
-        <p class="dialogue">“如果超时了会怎么样？”</p>
-        <p>王老师说：“会被取消资格！那场比赛就 0 分了！”</p>
-
-        <p><span class="chinese-label">我们的计划：</span></p>
-        <ul>
-            <li>设置闹钟，35秒一到就大喊“换手！”</li>
-            <li>不管机器人在干嘛，哪怕差一点就得分了，也必须停下来。</li>
-            <li>把机器人举起来，让它不能再动了。</li>
-        </ul>
-
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-        </div>
-        <div class="page-number">47</div>
-    </div>
-
-    <!-- ================= PAGE 48: 设计约束总结 ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
-        <h1>2.7 设计约束总结</h1>
-
-        <p>综合上面的所有规则，我们给设计组提了几点“死命令”：</p>
-
-        <ol>
-            <li><span class="chinese-label">必须能抓 Beam：</span> 不然只能拿低分。</li>
-            <li><span class="chinese-label">必须能举高：</span> 要超过 12 英寸才能挂高塔。</li>
-            <li><span class="chinese-label">必须能折叠：</span> 出发时要缩在 15 英寸高的小盒子里。</li>
-            <li><span class="chinese-label">必须分色：</span> 要能识别颜色，不然做不出完美 Stack。</li>
-        </ol>
-
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-        </div>
-        <div class="page-number">48</div>
-    </div>
-
-    <!-- ================= PAGE 49: 章节总结 ================= -->
+    <!-- ================= PAGE 44: 章节总结 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
@@ -1172,10 +1103,10 @@
             <span>2025年7月14日</span>
             <span>全员签字：叶恒瑞、叶恒嘉、宋书月、印涵邸</span>
         </div>
-        <div class="page-number">49</div>
+        <div class="page-number">44</div>
     </div>
 
-    <!-- ================= PAGE 50: 附录：规则笔记 (1) ================= -->
+    <!-- ================= PAGE 45: 附录：规则笔记 (1) ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
         <div class="chapter-2-marker"></div>
@@ -1185,32 +1116,10 @@
             <p><strong>SC6:</strong> Matching Goal = 颜色对颜色 (Floor Goal 没有！)</p>
             <p><strong>RSC3:</strong> Skills = 红色出发 + 红色装填</p>
         </div>
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-        </div>
-        <div class="page-number">50</div>
-    </div>
-
-    <!-- ================= PAGE 51: 附录：规则笔记 (2) ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
-        <h1>附录：我的规则小抄 (续)</h1>
         <div class="math-paper">
             <p><strong>GG11:</strong> 换手时间 = 35s - 25s</p>
             <p><strong>SG3:</strong> 垂直扩展 = 无限！</p>
         </div>
-        <div class="footer">
-            <span>记录人：印涵邸</span>
-        </div>
-        <div class="page-number">51</div>
-    </div>
-
-    <!-- ================= PAGE 52: 附录：规则笔记 (3) ================= -->
-    <div class="sheet">
-        <div class="a4-height-indicator"></div>
-        <div class="chapter-2-marker"></div>
-        <h1>附录：我的规则小抄 (续)</h1>
         <div class="math-paper">
             <p><strong>Beam:</strong> 10分 + 自动 Matching + 分数倍增！</p>
             <p><strong>R5:</strong> 尺寸 = 11 x 20 x 15 inch</p>
@@ -1218,8 +1127,9 @@
         <div class="footer">
             <span>记录人：印涵邸</span>
         </div>
-        <div class="page-number">52</div>
+        <div class="page-number">45</div>
     </div>
+
     <script>
         let darkTextVisible = true;
         let otherElementsVisible = true;
