fix footer of ch02

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -173,14 +173,19 @@
         /* 页脚 */
         .footer {
             position: absolute;
-            bottom: 20mm;
+            bottom: 15mm;
             left: 25mm;
             right: 20mm;
             border-top: 2px solid #333;
             padding-top: 10px;
             display: flex;
             justify-content: space-between;
-            font-size: 14px;
+            font-size: 22px;
+        }
+
+        .handwriting-box {
+            /* Adds 40mm of empty space to the right of the text */
+            padding-right: 40mm;
         }
 
         .page-number {
@@ -393,7 +398,8 @@
         </p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">22</div>
     </div>
@@ -420,7 +426,8 @@
         <p><span class="chinese-label">数量：</span> 场地上大部分都是橙色的（我们之前一直以为是绿色，原来今年改了！），还有红的和蓝的。我们要像收集宝石一样把它们收集起来。</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">23</div>
     </div>
@@ -443,7 +450,8 @@
         <p>虽然它很难抓，但是听说分数很高？我们得好好研究一下规则书，看看它到底值多少分。</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">24</div>
     </div>
@@ -479,7 +487,8 @@
             到底部会有匹配分哦！”</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">25</div>
     </div>
@@ -505,12 +514,13 @@
         <p><strong>宋书月</strong>指着规则书兴奋地说：“快看这条！比赛开始后，垂直方向<strong>无限扩展</strong>！”</p>
         <p><span class="chinese-label">全员欢呼：</span> 耶！这意味着我们可以做一个能伸长的“长颈鹿”！只要比赛一开始，我们就让它变高！</p>
 
-        <!-- <div class="img-placeholder" style="height: 250px;">
+        <!-- <div class="img-placeholder">
 
         </div> -->
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">26</div>
     </div>
@@ -538,7 +548,8 @@
         <p>如果我们放得太快，或者机器人抢跑了，都会被裁判警告的。我们得好好练习配合！</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">27</div>
     </div>
@@ -572,7 +583,8 @@
         </div>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">28</div>
     </div>
@@ -596,7 +608,8 @@
         <p>不过要注意，每个 Stack 最多只能获得一次匹配分奖励哦！</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">29</div>
     </div>
@@ -629,7 +642,8 @@
         <p>但是千万别为了这 2 分去碰已经搭好的 Stack -- Stack 碰到机器人，就不能算作连接了，那可亏大了！</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">30</div>
     </div>
@@ -643,9 +657,9 @@
         <p>为了熟悉计分规则，我们找了 10 个例子来练习算分。这些例子都在官方手册上能找到哦！</p>
         <table>
             <tr>
-                <th style="width: 10%;">例子</th>
-                <th style="width: 25%;">图示 (预留位置)</th>
-                <th>得分详解 (中文翻译)</th>
+                <th style="width: 15%;">例子</th>
+                <th style="width: 20%;">图示</th>
+                <th>得分详解</th>
             </tr>
             <tr>
                 <td><strong>&lt;SE1&gt;</strong></td>
@@ -685,7 +699,8 @@
         </table>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">31</div>
     </div>
@@ -698,9 +713,9 @@
 
         <table>
             <tr>
-                <th style="width: 10%;">例子</th>
-                <th style="width: 25%;">图示</th>
-                <th>得分详解 (中文翻译)</th>
+                <th style="width: 15%;">例子</th>
+                <th style="width: 20%;">图示</th>
+                <th>得分详解</th>
             </tr>
 
             <tr>
@@ -742,7 +757,8 @@
         </table>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">32</div>
     </div>
@@ -763,12 +779,12 @@
             <li>关注比赛计时器，35秒一到就示意“换手！”</li>
             <li>不管机器人在干嘛，哪怕差一点就得分了，也必须停下来。</li>
             <li>把机器人举起来，让它不能再动了。</li>
-        </ul>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
-        <div class="page-number">33</div>
+            <div class="page-number">33</div>
     </div>
 
 
@@ -793,7 +809,8 @@
         <p><span class="chinese-label">注意：</span> 重置的时候，机器人手里拿的分数都要拿走，不计分。所以重置是很亏的，我们要保证代码稳定！</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">34</div>
     </div>
@@ -815,7 +832,8 @@
         </ol>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">35</div>
     </div>
@@ -841,7 +859,7 @@
                     <li>策略 A：低空快跑流 (Low & Fast)</li>
                     <li>策略 B：高塔建筑师 (Tower Builder)</li>
                     <li>策略 C：Beam 专家 (Beam Strategist)</li>
-                    <li>策略 D：高塔上的圣杯（High Stake Grail）</li>
+                    <li>策略 D：高塔上的圣杯 (High Stake Grail)</li>
                 </ul>
             </div>
 
@@ -884,7 +902,8 @@
         <p><span class="chinese-label">缺点：</span> 对操作要求太高了，不能有一点失误。而且完全放弃了 Beam 的 10 分，感觉有点可惜。</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">37</div>
     </div>
@@ -916,7 +935,8 @@
         <p> 为了这多出的 10 分，我们要攻克在 Standoff Goal 上放置 3 个 Pin 的高难度动作，感觉有点“吃力不讨好”。我们觉得应该把目光转向 Beam，看看能不能利用它挖掘出更高的得分潜力。</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">38</div>
     </div>
@@ -941,7 +961,8 @@
 
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">39</div>
     </div>
@@ -976,7 +997,8 @@
         <p> 尽管不用准确匹配Stack与地面Goal去获得匹配奖励，省了一些力气，但并没有和前面两个策略拉开太大差距。我们得研究怎么把 Beam 架到那个高塔上去！</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">40</div>
     </div>
@@ -1020,7 +1042,8 @@
             </p>
         </div>
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">41</div>
     </div>
@@ -1048,7 +1071,8 @@
         <p class="dialogue"><span class="chinese-label">叶恒嘉：</span> “这个动作对机器人来说就像是‘举重’，还得是‘过顶举’，太考验核心力量了！”</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">42</div>
     </div>
@@ -1070,7 +1094,8 @@
         <p>从下一章开始，我们将进入激动人心的机器人设计环节，把这个伟大的构想变成现实！</p>
 
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">43</div>
     </div>
@@ -1094,14 +1119,17 @@
             </ul>
         </div>
 
-        <div class="img-placeholder" style="height: 300px;">
+        <img src="../assets/ch02/ch2-sum.webp" style="margin:0 auto;display: block;">
+
+
+        <!-- <div class="img-placeholder" style="height: 300px;">
 
             [图片：印涵邸画的一张“藏宝图”，终点画着我们的机器人举着 Beam 站在高塔上，旁边写着“通往冠军之路”]
-        </div>
+        </div> -->
 
         <div class="footer">
-            <span>2025年7月14日</span>
-            <span>全员签字：叶恒瑞、叶恒嘉、宋书月、印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">44</div>
     </div>
@@ -1113,19 +1141,20 @@
         <h1>附录：我的规则小抄</h1>
         <div class="math-paper">
             <p><strong>SC3:</strong> Connected = 垂直 + 不碰机器人</p>
-            <p><strong>SC6:</strong> Matching Goal = 颜色对颜色 (Floor Goal 没有！)</p>
-            <p><strong>RSC3:</strong> Skills = 红色出发 + 红色装填</p>
+            <p><strong>SC6:</strong> Matching Goal = 颜色对颜色</p>
+            <p><strong>Beam:</strong> 10分 + 自动 Matching + 多色奖励！</p>
         </div>
         <div class="math-paper">
+            <p><strong>RSC3:</strong> Skills = 红色出发 + 红色装填</p>
             <p><strong>GG11:</strong> 换手时间 = 35s - 25s</p>
+        </div>
+        <div class="math-paper">
+            <p><strong>R5:</strong> 机器人初始尺寸 = 11 x 20 x 15 inch</p>
             <p><strong>SG3:</strong> 垂直扩展 = 无限！</p>
         </div>
-        <div class="math-paper">
-            <p><strong>Beam:</strong> 10分 + 自动 Matching + 分数倍增！</p>
-            <p><strong>R5:</strong> 尺寸 = 11 x 20 x 15 inch</p>
-        </div>
         <div class="footer">
-            <span>记录人：印涵邸</span>
+            <span class="handwriting-box">日期：</span>
+            <span class="handwriting-box">记录人：</span>
         </div>
         <div class="page-number">45</div>
     </div>
